--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
                 <li><a href="game.html" class="active">Games</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="top.html">Top People</a></li>
-                <li><a href="contact.php">Rate</a></li>
+                <li><a href="contact.html">Rate</a></li>
             </ul>
         </nav>
     </div>
