--- a/photos.html
+++ b/photos.html
@@ -19,7 +19,7 @@
                 <li><a href="game.html">Games</a></li>
                 <li><a href="photos.html" class="active">Photos</a></li>
                 <li><a href="top.html">Top People</a></li>
-                <li><a href="contact.php">Rate</a></li>
+                <li><a href="contact.html">Rate</a></li>
             </ul>
         </nav>
     </div>
