--- a/top.html
+++ b/top.html
@@ -17,7 +17,7 @@
             <li><a href="game.html">Games</a></li>
             <li><a href="photos.html">Photos</a></li>
             <li><a href="top.html" class="active">Top People</a></li>
-            <li><a href="contact.php">Rate</a></li>
+            <li><a href="contact.html">Rate</a></li>
         </ul>
     </nav>
     <div class="container">
